bitfield/tests/fail/bad-base-type-2.rs
use bitfield::bitfield;

bitfield! {
    struct Bitfield: ut {
        
    }
}

fn main() {
    
}
